@@ -1,3 +1,4 @@
+#!/usr/bin/env bash
 # This shows you Relay in action.  Point your browser to:
 # http://<dockerip>:8080
 
@@ -7,28 +8,16 @@
 
 dir="$( cd "$( dirname "$( dirname "$0" )" )" && pwd )"
 
-echo start the Relay.web UI
-docker run -itd \
-  --name relay.web -p 8080:8080 -p 5673:5673 \
-  adgaudio/relay.web
+docker-compose build relay
 
-(cd $dir && docker build -t adgaudio/relay.runner .)
+(
+echo opening browser tab
+sleep 1
+cat <<EOF | python
+import webbrowser
+webbrowser.open_new_tab("http://localdocker:8080")
+EOF
+) &
 
-trap "echo removing relay.web docker container && (docker rm -f relay.web) &" \
-  EXIT SIGINT SIGTERM
-
-echo start Relay.runner
-docker run -it --rm \
-  --name relay.runner \
-  --link relay.web:web \
-  -e RELAY_WARMER=bash_echo_warmer \
-  -e RELAY_METRIC=bash_echo_metric \
-  -e RELAY_TARGET=oscillating_setpoint \
-  -e RELAY_DELAY=0.1 \
-  -e RELAY_RAMP=10 \
-  -e RELAY_SENDSTATS='tcp://web:5673' \
-  adgaudio/relay.runner
-
-  # -e RELAY_STOP_CONDITION=stop_if_mostly_diverging \
-
+docker-compose up --x-smart-recreate
 
